[tool.poetry]
name = "vyper-language-server"
version = "0.3.0"
description = "Language server for Vyper, a pythonic smart contract language"
authors = ["z80 <z80@ophy.xyz>"]
license = "MIT"
readme = "README.md"
keywords = [
  "vyper",
  "lsp",
  "vyper-lsp"
]
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
loguru = "^0.6.0"
pygls = "0.13.1"
tree-sitter = "^0.20.1"
pydantic = "^1.10"
lark = "^1.1.7"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[tool.poetry.scripts]
vyper-lsp = 'src.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
