[project]
name = "vyper-lsp"
version = "0.1.4"
requires-python = ">=3.12"
description = "Language server for Vyper, a pythonic smart contract language"
dependencies = [
    "lark>=1.1.7,<2.0.0",
    "lsprotocol>=2023.0.1,<2024.0.0",
    "vyper>=0.4.1,<0.5.0",
    "packaging>=23.1.0,<24.0.0",
    "pygls>=1.3.1,<2.0.0",
]
license = "MIT"
readme = "README.md"
keywords = [
  "vyper",
  "lsp",
  "vyper-lsp"
]
authors = [
    {name = "z80 z80", email = "z80@ophy.xyz"},
]

[project.scripts]
vyper-lsp = 'vyper_lsp.main:main'

[tool.poetry.scripts]
vyper-lsp = 'vyper_lsp.main:main'

[tool.coverage.run]
source = ["vyper_lsp"]
omit = ["vyper_lsp/__init__.py",
        "vyper_lsp/__main__.py",
        ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "flake8>=5.0.4,<5.1",
    "pre-commit>=3.5.0,<4.0",
    "pytest>=7.4.3,<7.5",
    "ruff>=0.8.3",
]
